[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flighthelper"
version = "0.1.0"
description = "ChatGPT-powered flight-search agent with a Gradio UI"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "dotenv>=0.9.9",
    "gradio==4.44.1",
    "openai>=1.93.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.0",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "ruff",                 # linting
    "pytest",               # tests
]

[tool.setuptools.packages.find]
where = ["src"]
